# amara

./: .gitignore  CMakeLists.txt  Doxyfile  FEATURE_BRANCH_README  INSTALL_LEGACY.md  Makefile  NOTICE  README.md  README_IMPORTANT  TODO  foo  howto_favic.md  misc.py  philosophy.md  thanks_to.md
amara.xcodeproj/: project.pbxproj
codebl/: codebl.cbp  codebl.depend  codebl.layout
examples/: README.md
examples/0_hello_world/: main.minia
examples/1_functions_structure/: main.minia
examples/1_operations_sequencing/: main.minia
examples/2.0_naturals_substraction/: main.minia
examples/2.1_naturals_division/: main.minia
examples/2.2_combine_math_operators_division_and_substraction/: main.minia
examples/2.3_combine_math_operators_substraction_and_division/: main.minia
examples/2.4_fahrenheit_to_celsius/: main.minia
examples/4_combine_math_operators_division_and_substraction/: main.minia
examples/__not_ready__2.0_naturals_substraction/: main.minia
examples/__not_ready__2.1_naturals_division/: main.minia
examples/__not_ready__2.2_combine_math_operators_division_and_substraction/: main.minia
examples/__not_ready__2.5_number_types/: main.minia
examples/__not_ready__2_naturals_substraction/: main.minia
examples/__not_ready__3_naturals_division/: main.minia
examples/__not_ready__3_where_clause_and_static_typing/: main.minia
examples/__not_ready__40_alternative_number_types_names/: main.minia
examples/__not_ready__50_machine_number_types/: main.minia
examples/__not_ready__60_types_of_functions/: main.minia
examples/__not_ready__70_interactivity_and_comments/: main.minia
examples/__not_ready__7_fahrenheit_to_celsius_stdin/: main.minia
examples/cellar/: example
ide/code_blocks/: amara.cbp  codebl.cbp
res/: README.md  minia.grammar
src/: README.md  arg.c  arg.h  definitions.h  macros.h  main.c
src/arn/: app_runner.c  app_runner.h  app_runner_tests.c  app_runner_tests.h  arn_tests.c  arn_tests.h  arn_type.c  arn_type.h  arn_type_tests.c  arn_type_tests.h  arn_value.c  arn_value.h  arn_value_tests.c  arn_value_tests.h  arn_values_fixed_list.c  arn_values_fixed_list.h  arn_values_fixed_list_tests.c  arn_values_fixed_list_tests.h  arn_values_simple_list.c  arn_values_simple_list.h  arn_values_simple_list_tests.c  arn_values_simple_list_tests.h  arn_variable.c  arn_variable.h  arn_variable_tests.c  arn_variable_tests.h  arn_variables_simple_list.c  arn_variables_simple_list.h  arn_variables_simple_list_tests.c  arn_variables_simple_list_tests.h
src/asr/: assertion.c  assertion.h
src/brt/: basic_arithmetic_tests.c  basic_arithmetic_tests.h  brt_forward_declarations.h  integer.c  integer.h  integer_tests.c  integer_tests.h  natural.c  natural.h  natural_tests.c  natural_tests.h  rational.c  rational.h  rational_tests.c  rational_tests.h
src/bsn/: bison_annex.c  bison_annex.h  bison_tests.c  bison_tests.h  flex_tests.c  flex_tests.h  minia.l  minia.y  syntax_tree_node.h  syntax_tree_node__REMOVEME.h
src/cmn/: amara_boolean.h  amara_string.c  amara_string.h  amara_string_tests.c  amara_string_tests.h  amara_strings_simple_list.c  amara_strings_simple_list.h  amara_strings_simple_list_tests.c  amara_strings_simple_list_tests.h  char_array.c  char_array.h  char_array_tests.c  char_array_tests.h  char_arrays_simple_list.c  char_arrays_simple_list.h  char_arrays_simple_list_tests.c  char_arrays_simple_list_tests.h  common_tests.c  common_tests.h
src/ftr/: stdio_ninety_nine_modernizer.c  stdio_ninety_nine_modernizer.h
src/log/: logging.c  logging.h
src/mmm/: allocator.c  allocator.h
src/prs/: persistence.c  persistence.h  persistence_tests.c  persistence_tests.h
src/rtg/: rtg_application.c  rtg_application.h  rtg_application_tests.c  rtg_application_tests.h  rtg_applications_simple_list.c  rtg_applications_simple_list.h  rtg_applications_simple_list_tests.c  rtg_applications_simple_list_tests.h  rtg_condition.c  rtg_condition.h  rtg_condition_tests.c  rtg_condition_tests.h  rtg_doc.c  rtg_doc.h  rtg_doc_tests.c  rtg_doc_tests.h  rtg_execution_request.c  rtg_execution_request.h  rtg_execution_request_tests.c  rtg_execution_request_tests.h  rtg_execution_requests_simple_list.c  rtg_execution_requests_simple_list.h  rtg_execution_requests_simple_list_tests.c  rtg_execution_requests_simple_list_tests.h  rtg_expression.c  rtg_expression.h  rtg_expression_sub_conditional.c  rtg_expression_sub_conditional.h  rtg_expression_sub_conditional_tests.c  rtg_expression_sub_conditional_tests.h  rtg_expression_sub_dice.c  rtg_expression_sub_dice.h  rtg_expression_sub_dice_tests.c  rtg_expression_sub_dice_tests.h  rtg_expression_sub_function_call.c  rtg_expression_sub_function_call.h  rtg_expression_sub_identifier.c  rtg_expression_sub_identifier.h  rtg_expression_sub_identifier_tests.c  rtg_expression_sub_identifier_tests.h  (+58 more)
src/stt/: stt_application.c  stt_application.h  stt_application_subnode.c  stt_application_subnode.h  stt_application_subnode_tests.c  stt_application_subnode_tests.h  stt_application_tests.c  stt_application_tests.h  stt_applications_simple_list.c  stt_applications_simple_list.h  stt_applications_simple_list_tests.c  stt_applications_simple_list_tests.h  stt_condition.c  stt_condition.h  stt_condition_subnode.c  stt_condition_subnode.h  stt_condition_subnode_tests.c  stt_condition_subnode_tests.h  stt_condition_tests.c  stt_condition_tests.h  stt_dice_expression.c  stt_dice_expression.h  stt_dice_expression_tests.c  stt_dice_expression_tests.h  stt_doc_subnode.c  stt_doc_subnode.h  stt_doc_subnode_tests.c  stt_doc_subnode_tests.h  stt_execution_request.c  stt_execution_request.h  stt_execution_request_subnode.c  stt_execution_request_subnode.h  stt_execution_request_subnode_tests.c  stt_execution_request_subnode_tests.h  stt_execution_request_tests.c  stt_execution_request_tests.h  stt_execution_requests_simple_list.c  stt_execution_requests_simple_list.h  stt_execution_requests_simple_list_tests.c  stt_execution_requests_simple_list_tests.h  (+144 more)
src/tst/: tests_pseudo_random_numbers_generation.c  tests_runner.c  (+8 more)
utils/: README.md
(+33 files in other folders)
