#   Created from CLion.

cmake_minimum_required(VERSION 3.16)
project(amara C)

set(CMAKE_C_STANDARD 90)

#   XXX ASSUMING CYGWIN.
add_definitions(-D__CYG__ -DAMARA_USE_STD_C89)

include_directories(build)
include_directories(build/src)
include_directories(build/src/bsn)
include_directories(src)
include_directories(src/arn)
include_directories(src/asr)
include_directories(src/brt)
include_directories(src/bsn)
include_directories(src/cmn)
include_directories(src/ftr)
include_directories(src/log)
include_directories(src/prs)
include_directories(src/rtg)
include_directories(src/stt)
include_directories(src/tst)
include_directories(src/wrp)

add_executable(amara
        build/src/bsn/lex.minia.c
        build/src/bsn/minia.tab.c
        build/src/bsn/minia.tab.h
        src/arn/app_runner.c
        src/arn/app_runner.h
        src/arn/app_runner_tests.c
        src/arn/app_runner_tests.h
        src/arn/arn_tests.c
        src/arn/arn_tests.h
        src/arn/arn_type.c
        src/arn/arn_type.h
        src/arn/arn_type_tests.c
        src/arn/arn_type_tests.h
        src/arn/arn_value.c
        src/arn/arn_value.h
        src/arn/arn_value_tests.c
        src/arn/arn_value_tests.h
        src/arn/arn_values_fixed_list.c
        src/arn/arn_values_fixed_list.h
        src/arn/arn_values_fixed_list_tests.c
        src/arn/arn_values_fixed_list_tests.h
        src/arn/arn_values_simple_list.c
        src/arn/arn_values_simple_list.h
        src/arn/arn_values_simple_list_tests.c
        src/arn/arn_values_simple_list_tests.h
        src/arn/arn_variable.c
        src/arn/arn_variable.h
        src/arn/arn_variable_tests.c
        src/arn/arn_variable_tests.h
        src/arn/arn_variables_simple_list.c
        src/arn/arn_variables_simple_list.h
        src/arn/arn_variables_simple_list_tests.c
        src/arn/arn_variables_simple_list_tests.h
        src/asr/assertion.c
        src/asr/assertion.h
        src/brt/basic_arithmetic_tests.c
        src/brt/basic_arithmetic_tests.h
        src/brt/brt_forward_declarations.h
        src/brt/integer.c
        src/brt/integer.h
        src/brt/integer_tests.c
        src/brt/integer_tests.h
        src/brt/natural.c
        src/brt/natural.h
        src/brt/natural_tests.c
        src/brt/natural_tests.h
        src/brt/rational.c
        src/brt/rational.h
        src/brt/rational_tests.c
        src/brt/rational_tests.h
        src/bsn/bison_annex.c
        src/bsn/bison_annex.h
        src/bsn/bison_tests.c
        src/bsn/bison_tests.h
        src/bsn/flex_tests.c
        src/bsn/flex_tests.h
        src/cmn/amara_boolean.h
        src/cmn/amara_string.c
        src/cmn/amara_string.h
        src/cmn/amara_string_tests.c
        src/cmn/amara_string_tests.h
        src/cmn/amara_strings_simple_list.c
        src/cmn/amara_strings_simple_list.h
        src/cmn/amara_strings_simple_list_tests.c
        src/cmn/amara_strings_simple_list_tests.h
        src/cmn/char_array.c
        src/cmn/char_array.h
        src/cmn/char_array_tests.c
        src/cmn/char_array_tests.h
        src/cmn/char_arrays_simple_list.c
        src/cmn/char_arrays_simple_list.h
        src/cmn/char_arrays_simple_list_tests.c
        src/cmn/char_arrays_simple_list_tests.h
        src/cmn/common_tests.c
        src/cmn/common_tests.h
        src/ftr/stdio_ninety_nine_modernizer.h
        src/log/logging.c
        src/log/logging.h
        src/mmm/allocator.c
        src/mmm/allocator.h
        src/prs/persistence.c
        src/prs/persistence.h
        src/prs/persistence_tests.c
        src/prs/persistence_tests.h
        src/rtg/rtg_application.c
        src/rtg/rtg_application.h
        src/rtg/rtg_application_tests.c
        src/rtg/rtg_application_tests.h
        src/rtg/rtg_applications_simple_list.c
        src/rtg/rtg_applications_simple_list.h
        src/rtg/rtg_applications_simple_list_tests.c
        src/rtg/rtg_applications_simple_list_tests.h
        src/rtg/rtg_condition.c
        src/rtg/rtg_condition.h
        src/rtg/rtg_condition_tests.c
        src/rtg/rtg_condition_tests.h
        src/rtg/rtg_doc.c
        src/rtg/rtg_doc.h
        src/rtg/rtg_doc_tests.c
        src/rtg/rtg_doc_tests.h
        src/rtg/rtg_execution_request.c
        src/rtg/rtg_execution_request.h
        src/rtg/rtg_execution_request_tests.c
        src/rtg/rtg_execution_request_tests.h
        src/rtg/rtg_execution_requests_simple_list.c
        src/rtg/rtg_execution_requests_simple_list.h
        src/rtg/rtg_execution_requests_simple_list_tests.c
        src/rtg/rtg_execution_requests_simple_list_tests.h
        src/rtg/rtg_expression.c
        src/rtg/rtg_expression.h
        src/rtg/rtg_expression_sub_conditional.c
        src/rtg/rtg_expression_sub_conditional.h
        src/rtg/rtg_expression_sub_conditional_tests.c
        src/rtg/rtg_expression_sub_conditional_tests.h
        src/rtg/rtg_expression_sub_dice.c
        src/rtg/rtg_expression_sub_dice.h
        src/rtg/rtg_expression_sub_dice_tests.c
        src/rtg/rtg_expression_sub_dice_tests.h
        src/rtg/rtg_expression_sub_identifier.c
        src/rtg/rtg_expression_sub_identifier.h
        src/rtg/rtg_expression_sub_identifier_tests.c
        src/rtg/rtg_expression_sub_identifier_tests.h
        src/rtg/rtg_expression_sub_natural_literal.c
        src/rtg/rtg_expression_sub_natural_literal.h
        src/rtg/rtg_expression_sub_string_literal.c
        src/rtg/rtg_expression_sub_string_literal.h
        src/rtg/rtg_expression_tests.c
        src/rtg/rtg_expression_tests.h
        src/rtg/rtg_named_function.c
        src/rtg/rtg_named_function.h
        src/rtg/rtg_named_function_call.c
        src/rtg/rtg_named_function_call.h
        src/rtg/rtg_named_function_tests.c
        src/rtg/rtg_named_function_tests.h
        src/rtg/rtg_named_functions_simple_list.c
        src/rtg/rtg_named_functions_simple_list.h
        src/rtg/rtg_named_functions_simple_list_tests.c
        src/rtg/rtg_named_functions_simple_list_tests.h
        src/rtg/rtg_operation.c
        src/rtg/rtg_operation.h
        src/rtg/rtg_operation_arg.c
        src/rtg/rtg_operation_arg.h
        src/rtg/rtg_operation_arg_tests.c
        src/rtg/rtg_operation_arg_tests.h
        src/rtg/rtg_operation_args_simple_list.c
        src/rtg/rtg_operation_args_simple_list.h
        src/rtg/rtg_operation_args_simple_list_tests.c
        src/rtg/rtg_operation_args_simple_list_tests.h
        src/rtg/rtg_operation_tests.c
        src/rtg/rtg_operation_tests.h
        src/rtg/rtg_operations_simple_list.c
        src/rtg/rtg_operations_simple_list.h
        src/rtg/rtg_operations_simple_list_tests.c
        src/rtg/rtg_operations_simple_list_tests.h
        src/rtg/rtg_tests.c
        src/rtg/rtg_tests.h
        src/rtg/rtg_where_value_binding.c
        src/rtg/rtg_where_value_binding.h
        src/rtg/rtg_where_value_binding_tests.c
        src/rtg/rtg_where_value_binding_tests.h
        src/rtg/rtg_where_value_bindings_simple_list.c
        src/rtg/rtg_where_value_bindings_simple_list.h
        src/rtg/rtg_where_value_bindings_simple_list_tests.c
        src/rtg/rtg_where_value_bindings_simple_list_tests.h
        src/stt/stt_application.c
        src/stt/stt_application.h
        src/stt/stt_application_subnode.c
        src/stt/stt_application_subnode.h
        src/stt/stt_application_subnode_tests.c
        src/stt/stt_application_subnode_tests.h
        src/stt/stt_application_tests.c
        src/stt/stt_application_tests.h
        src/stt/stt_applications_simple_list.c
        src/stt/stt_applications_simple_list.h
        src/stt/stt_applications_simple_list_tests.c
        src/stt/stt_applications_simple_list_tests.h
        src/stt/stt_condition.c
        src/stt/stt_condition.h
        src/stt/stt_condition_subnode.c
        src/stt/stt_condition_subnode.h
        src/stt/stt_condition_subnode_tests.c
        src/stt/stt_condition_subnode_tests.h
        src/stt/stt_condition_tests.c
        src/stt/stt_condition_tests.h
        src/stt/stt_dice_expression.c
        src/stt/stt_dice_expression.h
        src/stt/stt_dice_expression_tests.c
        src/stt/stt_dice_expression_tests.h
        src/stt/stt_doc_subnode.c
        src/stt/stt_doc_subnode.h
        src/stt/stt_doc_subnode_tests.c
        src/stt/stt_doc_subnode_tests.h
        src/stt/stt_execution_request.c
        src/stt/stt_execution_request.h
        src/stt/stt_execution_request_subnode.c
        src/stt/stt_execution_request_subnode.h
        src/stt/stt_execution_request_subnode_tests.c
        src/stt/stt_execution_request_subnode_tests.h
        src/stt/stt_execution_request_tests.c
        src/stt/stt_execution_request_tests.h
        src/stt/stt_execution_requests_simple_list.c
        src/stt/stt_execution_requests_simple_list.h
        src/stt/stt_execution_requests_simple_list_tests.c
        src/stt/stt_execution_requests_simple_list_tests.h
        src/stt/stt_expression.c
        src/stt/stt_expression.h
        src/stt/stt_expression_sub_conditional.c
        src/stt/stt_expression_sub_conditional.h
        src/stt/stt_expression_sub_conditional_tests.c
        src/stt/stt_expression_sub_conditional_tests.h
        src/stt/stt_expression_sub_dice.c
        src/stt/stt_expression_sub_dice.h
        src/stt/stt_expression_sub_dice_tests.c
        src/stt/stt_expression_sub_dice_tests.h
        src/stt/stt_expression_sub_identifier.c
        src/stt/stt_expression_sub_identifier.h
        src/stt/stt_expression_sub_identifier_tests.c
        src/stt/stt_expression_sub_identifier_tests.h
        src/stt/stt_expression_sub_natural_literal.c
        src/stt/stt_expression_sub_natural_literal.h
        src/stt/stt_expression_sub_string_literal.c
        src/stt/stt_expression_sub_string_literal.h
        src/stt/stt_expression_subnode.c
        src/stt/stt_expression_subnode.h
        src/stt/stt_expression_subnode_tests.c
        src/stt/stt_expression_subnode_tests.h
        src/stt/stt_expression_tests.c
        src/stt/stt_expression_tests.h
        src/stt/stt_forward_declarations.h
        src/stt/stt_identifier_subnode.c
        src/stt/stt_identifier_subnode.h
        src/stt/stt_identifier_subnode_tests.c
        src/stt/stt_identifier_subnode_tests.h
        src/stt/stt_integer_literal_subnode.c
        src/stt/stt_integer_literal_subnode.h
        src/stt/stt_integer_literal_subnode_tests.c
        src/stt/stt_integer_literal_subnode_tests.h
        src/stt/stt_named_function.c
        src/stt/stt_named_function.h
        src/stt/stt_named_function_call.c
        src/stt/stt_named_function_call.h
        src/stt/stt_named_function_subnode.c
        src/stt/stt_named_function_subnode.h
        src/stt/stt_named_function_subnode_tests.c
        src/stt/stt_named_function_subnode_tests.h
        src/stt/stt_named_function_tests.c
        src/stt/stt_named_function_tests.h
        src/stt/stt_named_functions_simple_list.c
        src/stt/stt_named_functions_simple_list.h
        src/stt/stt_named_functions_simple_list_tests.c
        src/stt/stt_named_functions_simple_list_tests.h
        src/stt/stt_natural_literal_subnode.c
        src/stt/stt_natural_literal_subnode.h
        src/stt/stt_natural_literal_subnode_tests.c
        src/stt/stt_natural_literal_subnode_tests.h
        src/stt/stt_node.c
        src/stt/stt_node.h
        src/stt/stt_node_sub_named_function_call.c
        src/stt/stt_node_sub_named_function_call.h
        src/stt/stt_node_tests.c
        src/stt/stt_node_tests.h
        src/stt/stt_operation.c
        src/stt/stt_operation.h
        src/stt/stt_operation_arg.c
        src/stt/stt_operation_arg.h
        src/stt/stt_operation_arg_tests.c
        src/stt/stt_operation_arg_tests.h
        src/stt/stt_operation_args_simple_list.c
        src/stt/stt_operation_args_simple_list.h
        src/stt/stt_operation_args_simple_list_tests.c
        src/stt/stt_operation_args_simple_list_tests.h
        src/stt/stt_operation_subnode.c
        src/stt/stt_operation_subnode.h
        src/stt/stt_operation_subnode_tests.c
        src/stt/stt_operation_subnode_tests.h
        src/stt/stt_operation_tests.c
        src/stt/stt_operation_tests.h
        src/stt/stt_operations_list_subnode.c
        src/stt/stt_operations_list_subnode.h
        src/stt/stt_operations_list_subnode_tests.c
        src/stt/stt_operations_list_subnode_tests.h
        src/stt/stt_operations_simple_list.c
        src/stt/stt_operations_simple_list.h
        src/stt/stt_operations_simple_list_tests.c
        src/stt/stt_operations_simple_list_tests.h
        src/stt/stt_rational_literal_subnode.c
        src/stt/stt_rational_literal_subnode.h
        src/stt/stt_rational_literal_subnode_tests.c
        src/stt/stt_rational_literal_subnode_tests.h
        src/stt/stt_string_literal_subnode.c
        src/stt/stt_string_literal_subnode.h
        src/stt/stt_string_literal_subnode_tests.c
        src/stt/stt_string_literal_subnode_tests.h
        src/stt/stt_tests.c
        src/stt/stt_tests.h
        src/stt/stt_where_value_binding.c
        src/stt/stt_where_value_binding.h
        src/stt/stt_where_value_binding_subnode.c
        src/stt/stt_where_value_binding_subnode.h
        src/stt/stt_where_value_binding_subnode_tests.c
        src/stt/stt_where_value_binding_subnode_tests.h
        src/stt/stt_where_value_binding_tests.c
        src/stt/stt_where_value_binding_tests.h
        src/stt/stt_where_value_bindings_simple_list.c
        src/stt/stt_where_value_bindings_simple_list.h
        src/stt/stt_where_value_bindings_simple_list_tests.c
        src/stt/stt_where_value_bindings_simple_list_tests.h
        src/stt/stt_where_value_bindings_subnode.c
        src/stt/stt_where_value_bindings_subnode.h
        src/stt/stt_where_value_bindings_subnode_tests.c
        src/stt/stt_where_value_bindings_subnode_tests.h
        src/tst/tests_pseudo_random_numbers_generation.c
        src/tst/tests_pseudo_random_numbers_generation.h
        src/tst/tests_pseudo_random_numbers_generation_tests.c
        src/tst/tests_pseudo_random_numbers_generation_tests.h
        src/tst/tests_runner.c
        src/tst/tests_runner.h
        src/tst/tests_simple_list.c
        src/tst/tests_simple_list.h
        src/tst/tests_simple_list_tests.c
        src/tst/tests_simple_list_tests.h
        src/wrp/dirent_wrapper.c
        src/wrp/dirent_wrapper.h
        src/arg.c
        src/arg.h
        src/definitions.h
        src/main.c)
